--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # PyInRpkg
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/galenholt/py_in_rpkg/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/galenholt/py_in_rpkg/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of PyInRpkg is to play with different ways of wrapping python in an R package to make it feel seamless and also be robust to both auto-managing python environments and not stomp on preexisting environments.
